# real-estate

./: .gitignore  app.py  pyproject.toml
HousingTransform/: dbt_project.yml
HousingTransform/models/example/: test.sql  transform_table.sql
RE/RE/: items.py  middlewares.py  pipelines.py  settings.py
RE/RE/spiders/: extract_real_estate.py
