[tool.poetry]
name = "real-estate"
version = "0.1.0"
description = "For Taiwan Real Estate"
authors = ["Cheng-Hsun, Hsu <a10121555@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.2"
pandas = "^2.2.2"
pyquery = "^2.0.0"
redis = "^5.0.8"
scrapy-redis = "^0.9.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
