[tool.poetry]
name = "real-estate"
version = "0.1.0"
description = "For Taiwan Real Estate"
authors = ["Cheng-Hsun, Hsu <a10121555@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.2"
pandas = "^2.2.2"
pyquery = "^2.0.0"
redis = "^5.0.8"
scrapy-redis = "^0.9.1"
black = "^24.8.0"
sqlalchemy = "^2.0.32"
pymysql = "^1.1.1"
pymongo = "^4.8.0"
mysql-connector = "^2.2.9"
dbt-core = "^1.7.0"
dbt-mysql = "^1.7.0"
streamlit = "^1.37.1"
plotly = "^5.23.0"
watchdog = "^4.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
